fix spacing issue on projects

--- a/public/style.css
+++ b/public/style.css
@@ -7,13 +7,8 @@
     width: 10px;
     background: #3C3C3C;
 }
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 1px #ACA7CB;
-    border-radius: 5px;
-}
 ::-webkit-scrollbar-thumb {
     background: #900099;
-    border-radius: 5px;
 }
 ::selection {
     background: #FF00FF;
